--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,7 @@
                         <a href="https://github.com/{{ site.github_username }}"><i class="fab fa-github"></i></a>
                         {% endif %}
                         {% if site.rss %}
-                        <a href="{{ site.url }}/{{ site.rss }}"><i class="fas fa-rss"></i></a>
+                        <a href="{{ site.baseurl }}/{{ site.rss }}"><i class="fas fa-rss"></i></a>
                         {% endif %}
                     </p>
                 </div>
