Update url refs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,13 @@ layout: default
                     {% comment %}"where" creates an array, so using "first" we can pop the first item off of the array of 1.{% endcomment %}
                     {% assign author_data = site.people | where:"author", author | first %}
                     <div class="people people-jumbotron">
-                        <a href="{{ author_data.url }}"><img src="{{ site.url }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a> <a href="{{ author_data.url }}">{{ author_data.name }}</a>, {{ author_data.bio_short }}
+                        <a href="{{ author_data.url }}"><img src="{{ site.baseurl }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a> <a href="{{ author_data.url }}">{{ author_data.name }}</a>, {{ author_data.bio_short }}
                     </div>
                     {% endfor %}
                     {% endif %}
                     {% if page.form %}
                     <div class="request">
-                        <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">{% if page.form_text %}{{ page.form_text }}{% else %}Request {{ page.service | downcase }}{% endif %}</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
+                        <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">{% if page.form_text %}{{ page.form_text }}{% else %}Request {{ page.service | downcase }}{% endif %}</a> &nbsp; Questions? <a href="{{ site.baseurl }}/contact">Contact us</a></p>
                     </div>
                     {% endif %}
                     {% if page.action %}
