--- a/_layouts/help.html
+++ b/_layouts/help.html
@@ -29,7 +29,7 @@ layout: wrapper
             {% comment %}"where" creates an array, so using "first" we can pop the first item off of the array of 1.{% endcomment %}
             {% assign author_data = site.people | where:"author", author | first %}
             <div class="people">
-                <a href="{{ author_data.url }}"><img src="{{ site.url }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a>
+                <a href="{{ author_data.url }}"><img src="{{ site.baseurl }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a>
                 <p class="text-muted byline"><a href="{{ author_data.url }}"> {{ author_data.name }}</a></p>
             </div>
             <p class="people-social">
@@ -50,7 +50,7 @@ layout: wrapper
             <h2>Answer</h2>
             {{ content }}
             <div class="alert alert-secondary" role="alert">
-                <p><strong>Have a question?</strong> <a href="{{ site.url }}/ask">Ask us anything</a>.</p>
+                <p><strong>Have a question?</strong> <a href="{{ site.baseurl }}/ask">Ask us anything</a>.</p>
             </div>
             <h2>Related topics</h2>
             <div class="post-categories">
@@ -94,7 +94,7 @@ layout: wrapper
             {% endif %}
             {% endif %}
             {% endfor %}
-            <p><a href="{{ site.url }}/help">Help</a></p>
+            <p><a href="{{ site.baseurl }}/help">Help</a></p>
         </div>
     </div>
 </div>
