--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -5,7 +5,7 @@ layout: wrapper
     <div class="container">
         <div class="row">
             <div class="col-md-2 people-img">
-                <img src="{{ site.url }}/img/people/{{ page.image }}" alt="{{ page.name }}" title="{{ page.name }}">
+                <img src="{{ site.baseurl }}/img/people/{{ page.image }}" alt="{{ page.name }}" title="{{ page.name }}">
             </div>
             <div class="col-md-10">
                 <h1 class="display-4">{{ page.name }}</h1>
