--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: wrapper
             {% comment %}"where" creates an array, so using "first" we can pop the first item off of the array of 1.{% endcomment %}
             {% assign author_data = site.people | where:"author", author | first %}
             <div class="people">
-                <a href="{{ author_data.url }}"><img src="{{ site.url }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a>
+                <a href="{{ author_data.url }}"><img src="{{ site.baseurl }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a>
                 <p class="text-muted byline"><a href="{{ author_data.url }}"> {{ author_data.name }}</a></p>
             </div>
             <p class="people-social">
