--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -108,7 +108,7 @@ layout: default
     <div class="row">
         <div class="col-md-2">
             <div class="people bio">
-                <a href="{{ author_data.url }}"><img src="{{ site.url }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a>
+                <a href="{{ author_data.url }}"><img src="{{ site.baseurl }}/img/people/{{ author_data.image }}" alt="{{ author_data.name }}" title="{{ author_data.name }}"></a>
                 <p class="people-social">
                     {% if author_data.linkedin %}
                     <a href="{{ author_data.linkedin }}"><i class="fab fa-linkedin"></i></a>
@@ -137,7 +137,7 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Request {{ page.service | downcase }}</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
+                <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Request {{ page.service | downcase }}</a> &nbsp; Questions? <a href="{{ site.baseurl }}/contact">Contact us</a></p>
             </div>
         </div>
     </div>
