--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-md-auto">
                 {% for item in site.data.nav.docs %}
-                <li class="nav-item {% if item.url == page.url %}active{% endif %}"><a href="{{ site.baseurlitem.url }}" class="nav-link">{{ item.title }}</a></li>
+                <li class="nav-item {% if item.url == page.url %}active{% endif %}"><a href="{{ site.baseurl }}{{item.url }}" class="nav-link">{{ item.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
