--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@ layout: default
                     {% endif %}
                     {% if page.action %}
                     <div class="request">
-                        <p><a class="btn btn-primary btn-lg" href="{{ baseurl.action }}/contact" role="button">{{ page.action }}</a></p>
+                        <p><a class="btn btn-primary btn-lg" href="{{ site.baseurl }}/contact" role="button">{{ page.action }}</a></p>
                     </div>
                     {% endif %}
                 </div>
