--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,11 +3,11 @@
     <div class="card">
         <div class="card-body icon">
             {{ item.icon }}
-            <h3><a href="{{ item.url }}" class="stretched-link">{{ item.title }}</a></h3>
+            <h3><a href="{{ site.baseurl }}{{ item.url }}" class="stretched-link">{{ item.title }}</a></h3>
             <p>{{ item.description }}</p>
         </div>
         <div class="card-footer">
-            <a class="btn btn-primary" href="{{ item.url }}" role="button">Browse {{ item.title }}</a>
+            <a class="btn btn-primary" href="{{ site.baseurl }}{{ item.url }}" role="button">Browse {{ item.title }}</a>
         </div>
     </div>
     {% endfor %}
