--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,11 +29,11 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>Join Our Team</h2>
-                    <p><a class="btn" href="/careers">Careers &raquo;</a></p>
+                    <p><a class="btn" href="{{ site.baseurl }}/careers">Careers &raquo;</a></p>
                 </div>
                 <div class="col-md-6">
                     <h2>Hire Us</h2>
-                    <p><a class="btn" href="/contact">Contact &raquo;</a></p>
+                    <p><a class="btn" href="{{ site.baseurl }}/contact">Contact &raquo;</a></p>
                 </div>
             </div>
         </div>
