--- a/_includes/guide.html
+++ b/_includes/guide.html
@@ -2,8 +2,8 @@
     {% for item in site.data.guide.docs %}
     <div class="card">
         <div class="card-body icon">
-            <a href="{{ item.url }}" class="stretched-link">{{ item.icon }}</a>
-            <h3><a href="/guide{{ item.url }}" class="stretched-link">{{ item.title }}</a></h3>
+            <a href="{{ site.baseurl }}/guide{{ item.url }}" class="stretched-link">{{ item.icon }}</a>
+            <h3><a href="{{ site.baseurl }}guide{{ item.url }}" class="stretched-link">{{ item.title }}</a></h3>
         </div>
     </div>
     {% endfor %}
