--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,7 +69,7 @@ layout: wrapper
                 <ul class="nav nav-pills">
                     {% for category in categories %}
                     <li class="nav-item">
-                        <a href="{{site.baseurl}}/topics/{{category|slugify}}">{{ category | capitalize }}</a></li>
+                        <a href="{{ site.baseurl }}/topics/{{ category|slugify }}">{{ category | capitalize }}</a></li>
                     {% unless forloop.last %}&nbsp;{% endunless %}
                     {% endfor %}
                 </ul>
@@ -92,7 +92,7 @@ layout: wrapper
             {% endfor %}
             {% if sameTagCount >= minCommonTags %}
             <div>
-                <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
                 <p class="text-muted">{{ post.date | date: "%B, %-d %Y"}}</p>
             </div>
             {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
@@ -101,7 +101,7 @@ layout: wrapper
             {% endif %}
             {% endif %}
             {% endfor %}
-            <p><a href="/news">News</a></p>
+            <p><a href="{{ site.baseurl }}/news">News</a></p>
         </div>
     </div>
 </div>
