--- a/_layouts/topic.html
+++ b/_layouts/topic.html
@@ -21,9 +21,9 @@ layout: default
             <div class="card-deck">
                 <div class="card">
                     <div class="card-body">
-                        <h2><a href="{{ site.baseurl }}capabilities" class="stretched-link">Capabilities</a></h2></a>
-                        <p class="icon"><a href="{{ site.baseurl }}capabilities"><i class="far fa-lightbulb"></i></a></p>
-                        <p>CivicActions <a href="{{ site.baseurl }}capabilities">{{ page.title }} capabilities</a>.</p>
+                        <h2><a href="{{ site.baseurl }}/capabilities" class="stretched-link">Capabilities</a></h2></a>
+                        <p class="icon"><a href="{{ site.baseurl }}/capabilities"><i class="far fa-lightbulb"></i></a></p>
+                        <p>CivicActions <a href="{{ site.baseurl }}/capabilities">{{ page.title }} capabilities</a>.</p>
                     </div>
                     <div class="card-footer">
                         <a class="btn btn-primary" href="{{ site.baseurl }}/capabilities" role="button">Capabilities</a>
@@ -31,9 +31,9 @@ layout: default
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h2><a href="{{ site.baseurl }}contracting" class="stretched-link">Contracting</a></h2>
-                        <p class="icon"><a href="{{ site.baseurl }}contracting"><i class="fas fa-file-contract"></i></a></p>
-                        <p>CivicActions <a href="{{ site.baseurl }}contracting">{{ page.title }} contracting information</a>.</p>
+                        <h2><a href="{{ site.baseurl }}/contracting" class="stretched-link">Contracting</a></h2>
+                        <p class="icon"><a href="{{ site.baseurl }}/contracting"><i class="fas fa-file-contract"></i></a></p>
+                        <p>CivicActions <a href="{{ site.baseurl }}/contracting">{{ page.title }} contracting information</a>.</p>
                     </div>
                     <div class="card-footer">
                         <a class="btn btn-primary" href="{{ site.baseurl }}/contracting" role="button">Contracting</a>
@@ -41,12 +41,12 @@ layout: default
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h2><a href="{{ site.baseurl }}contact" class="stretched-link">Contact</a></h2>
-                        <p class="icon"><a href="{{ site.baseurl }}contact"><i class="fas fa-plug"></i></a></p>
-                        <p><a href="/contact">Contact CivicActions</a> for your {{ page.title }} needs.</p>
+                        <h2><a href="{{ site.baseurl }}/contact" class="stretched-link">Contact</a></h2>
+                        <p class="icon"><a href="{{ site.baseurl }}/contact"><i class="fas fa-plug"></i></a></p>
+                        <p><a href="{ site.baseurl }}/contact">Contact CivicActions</a> for your {{ page.title }} needs.</p>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" href="{{ site.baseurl }}capabilities" role="button">Contact</a>
+                        <a class="btn btn-primary" href="{{ site.baseurl }}/contact" role="button">Contact</a>
                     </div>
                 </div>
             </div>
