--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -11,7 +11,7 @@ layout: wrapper
         <div class="col-md-3">
             <div class="list-group">
                 {% for item in site.data.guide.docs %}
-                <a href="/guide{{ item.url }}" class="list-group-item list-group-item-action {% if item.url == page.url %}active{% endif %}">{{ item.title }}</a>
+                <a href="{{ site.baseurl}}/guide{{ item.url }}" class="list-group-item list-group-item-action {% if item.url == page.url %}active{% endif %}">{{ item.title }}</a>
                 {% endfor %}
             </div>
         </div>
