--- a/_layouts/handbook.html
+++ b/_layouts/handbook.html
@@ -11,7 +11,7 @@ layout: wrapper
         <div class="col-md-3">
             <div class="list-group">
                 {% for item in site.data.handbook.docs %}
-                <a href="/handbook{{ item.url }}" class="list-group-item list-group-item-action {% if item.url == page.url %}active{% endif %}">{{ item.title }}</a>
+                <a href="{{ site.baseurl}}/handbook{{ item.url }}" class="list-group-item list-group-item-action {% if item.url == page.url %}active{% endif %}">{{ item.title }}</a>
                 {% endfor %}
             </div>
         </div>
