--- a/_layouts/case-studies.html
+++ b/_layouts/case-studies.html
@@ -1,12 +1,13 @@
 ---
 layout: wrapper
 ---
+{% assign clients = site.data.clients.docs | where: "name", page.client %}
 <div class="jumbotron">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="display-4">{{ page.title }}</h1>
-                <p class="lead">{{ page.agency }}</p>
+                <p class="lead"><a href="{{ site.baseurl }}/clients{{ clients[0].url }}">{{ page.agency }}</a></p>
             </div>
         </div>
     </div>
